feat: add AWS S3 configuration and update dependencies

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,12 @@ REDIS_QUEUE=creative_jobs
 # Blob Storage
 BLOB_DIR=/data/blob
 
+# AWS S3 Configuration
+S3_BUCKET=seu-bucket-creative-service
+S3_REGION=us-east-1
+AWS_ACCESS_KEY_ID=sua_access_key_aqui
+AWS_SECRET_ACCESS_KEY=sua_secret_key_aqui
+
 # Concurrency
 MAX_CONCURRENCY=6
 
