--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,36 +11,12 @@ services:
       META_API_VERSION: "v24.0"
       HTTP_TIMEOUT: "45s"
       DATABASE_URL: "postgres://postgres:postgres@postgres:5432/creatives?sslmode=disable"
-      REDIS_ADDR: "redis:6379"
-      REDIS_QUEUE: "creative_jobs"
-      BLOB_DIR: "/data/blob"
       MAX_CONCURRENCY: "6"
       TOKEN_FRANCISCO: ${TOKEN_FRANCISCO}
       TOKEN_CONTIGENCIA01: ${TOKEN_CONTIGENCIA01}
 
-    volumes:
-      - blobdata:/data/blob
-    depends_on: [postgres, redis]
+    depends_on: [postgres]
 
-  worker:
-    build: .
-    command: ["/bin/worker"]
-    env_file:
-      - .env
-    environment:
-      META_BASE_URL: "https://graph.facebook.com"
-      META_API_VERSION: "v24.0"
-      HTTP_TIMEOUT: "45s"
-      DATABASE_URL: "postgres://postgres:postgres@postgres:5432/creatives?sslmode=disable"
-      REDIS_ADDR: "redis:6379"
-      REDIS_QUEUE: "creative_jobs"
-      BLOB_DIR: "/data/blob"
-      MAX_CONCURRENCY: "3"
-      TOKEN_FRANCISCO: ${TOKEN_FRANCISCO}
-      TOKEN_CONTIGENCIA01: ${TOKEN_CONTIGENCIA01}
-    volumes:
-      - blobdata:/data/blob
-    depends_on: [postgres, redis]
 
   postgres:
     image: postgres:16
@@ -50,9 +26,3 @@ services:
       POSTGRES_DB: creatives
     ports: ["5433:5432"]
 
-  redis:
-    image: redis:7
-    ports: ["6379:6379"]
-
-volumes:
-  blobdata: {}
